Nueva conexion base de datos

--- a/ProyectoCiclo3.App.Frontend/appsettings.json
+++ b/ProyectoCiclo3.App.Frontend/appsettings.json
@@ -8,6 +8,5 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityDataContextConnection": "Server=equipo4grupo25.database.windows.net;Database=ProyectoCiclo3;User ID=admin_equipo4grupo25;Password=#cnXNzskHd^t;"
-  }
+    "IdentityDataContextConnection": "Server=equipo04grupo025.database.windows.net;Database=ProyectoCiclo3;User ID=admin_equipo4_grupo25;Password=#cnXNzskHd^t;"}
 }
